--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+    <meta property="og:title" content="Spokesman News- News site">
+<meta property="og:description" content="Best News site without unnecessary Ads">
+<meta property="og:image" content="logo.jpg">
+<meta property="og:url" content="https://ekohnews.vercel.app/">
+<meta property="og:type" content="News Site">
+<meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
 
