--- a/index.html
+++ b/index.html
@@ -85,17 +85,9 @@
         </div>
     </div><br><br>
     <div class="videos">
-        <div class="featured-video">
-            <h2>Featured Video</h2>
-            <video controls muted autoplay>
-              <source src="video1.mp4" type="video/mp4">
-            </video>
+        <div class="featured-video" id="video1">
         </div><br><br><br>
         <div class="featured-video" id="postedNews">
-            <h2>Ad</h2>
-            <video controls muted autoplay>
-              <source src="video2.mp4" type="video/mp4">
-            </video>
         </div>
     </div>
 
