--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="business.html">Business</a>
-        <a href="con.html">Contact Us</a>
+        <a href="con.html">Contact</a>
         <a href="sport.html">Sports</a>
         <a href="enter.html">Entertainment</a>
 
