Updated id for the subscription form

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <p class="first">Subscribe to our news letter and never miss our latest news, podcasts etc...</p>
   <h4>THE MOST IMPORTANT NEWS HEADLINES AND EVENT OF THE DAY</h4><br>
   <p>Subscribe to our mailing lists to recieve daily news update direct in your inbox!</p>
-  <form>
+  <form id ="subscriptionForm">
     <input id="email" type="email" placeholder="Your Email Address" required>
     <button id="signUp">Sign Up</button>
     <div class="spinner-overlay" id="spinner-overlay">
